--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /../../../../../:\workspace\java\SpringLearn\.idea/dataSources/
 /dataSources.local.xml
 # Editor-based HTTP Client requests
 /httpRequests/
+/out/
+/.idea/
+/.gradle/
+*/target/
