--- a/data/pom.xml
+++ b/data/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>data</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jdbc</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+    </dependencies>
+
 </project>
