--- a/webMvc/src/main/resources/jdbc.properties
+++ b/webMvc/src/main/resources/jdbc.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=feng189
+jdbc.url=jdbc:mysql://localhost:3306/springlearn?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.username=root
+jdbc.password=feng189
